# sans

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  sans.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: .gitignore  README.md  bench.sh  http_results.csv  report.py
compiler/: codegen.sans  constants.sans  doc.sans  fmt.sans  ir.sans  lexer.sans  lint.sans  main.sans  parser.sans  pkg.sans  test_debug.sans  typeck.sans
crates/cyflym-driver/: Cargo.toml
crates/cyflym-driver/src/: imports.rs  main.rs
crates/cyflym-driver/tests/: e2e.rs
crates/sans-driver/: Cargo.toml
crates/sans-driver/src/: imports.rs  main.rs
crates/sans-driver/tests/: e2e.rs
docs/: ai-reference.md  bootstrap-status.md  memory-audit-v0.8.1.md  reference.md  security-guide.md
examples/: concurrent_server.sans  cors_server.sans  filesystem_demo.sans  gen_cert.sh  hello.sans  hello_cyflym.cy  https_server.sans  package_demo.sans  server.cy  server.sans  streaming_server.sans  websocket_server.sans
lsp/: analyzer.sans  completion.sans  folding.sans  main.sans  module_cache.sans  protocol.sans  references.sans  rpc.sans  semantic_tokens.sans  symbols.sans
playground/: db.go  go.mod  main.go
runtime/: arena.sans  array_ext.c  array_ext.sans  bitwise.sans  curl.sans  curl_helpers.c  encoding.sans  fs.sans  functional.c  functional.sans  http.c  http.sans  io.sans  iter.sans  json.c  json.sans  kernel.c  log.c  log.sans  map.sans  math.sans  net.sans  rc.sans  (+17 more)
(+664 files in other folders)
