[package]
name = "cyflym"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cyflym"
path = "src/main.rs"

[dependencies]
cyflym-lexer = { path = "../cyflym-lexer" }
cyflym-parser = { path = "../cyflym-parser" }
cyflym-typeck = { path = "../cyflym-typeck" }
cyflym-ir = { path = "../cyflym-ir" }
cyflym-codegen = { path = "../cyflym-codegen" }
